--- a/Seite2.html
+++ b/Seite2.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title> Hallo hier ist ein bild von mir  </title>
 </head>
+
 <body>
+
+<a href="index.html"> <img src="favicon.ico"></a>
 
 </body>
 </html>
